<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/landing_page_background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/application_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnOrderPreserved="false"
        android:layout_marginTop="40sp"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/meal_planner_button"
            android:src="@drawable/meal_planner_button"
            android:layout_column="0"
            android:layout_row="0"
            android:contentDescription="@string/mealButton"
            android:paddingEnd="20dp"
            android:paddingBottom="20dp"
            android:clickable="true"
            android:focusable="true"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/todo_button"
            android:src="@drawable/todo_button"
            android:layout_column="1"
            android:layout_row="0"
            android:contentDescription="@string/todoButton"
            android:clickable="true"
            android:focusable="true"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/budget_planner_button"
            android:src="@drawable/budget_planner_button"
            android:layout_column="0"
            android:layout_row="1"
            android:contentDescription="@string/budgetButton"
            android:clickable="true"
            android:focusable="true"/>

        <ImageView
            android:id="@+id/venue_finder_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/venue_finder_button"
            android:layout_row="1"
            android:layout_column="1"
            android:contentDescription="@string/venueButton"
            android:clickable="true"
            android:focusable="true"/>
    </GridLayout>
</LinearLayout>