<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:id="@+id/mealLayout">

    <ImageView
        android:id="@+id/mealPlannerLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:src="@drawable/meal_logo"/>

    <!--    starter selection-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mealPlannerLogo"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:id="@+id/starterSelection"
        android:paddingTop="20dp"
        android:paddingLeft="5dp"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/starter"
            android:paddingRight="25dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="36dp"
            android:hint="@string/starter_placeholder"
            android:textColor="@color/white"
            android:gravity="center"/>

    </LinearLayout>

    <!--    main selection-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/starterSelection"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:id="@+id/mainSelection"
        android:paddingTop="10dp"
        android:paddingLeft="5dp"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/main"
            android:paddingRight="25dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="36dp"
            android:hint="@string/main_placeholder"
            android:textColor="@color/white"
            android:gravity="center"/>

    </LinearLayout>

    <!--    dessert selection-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainSelection"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:id="@+id/dessertSelection"
        android:paddingTop="10dp"
        android:paddingLeft="5dp"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dessert"
            android:paddingRight="25dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="36dp"
            android:hint="@string/dessert_placeholder"
            android:textColor="@color/white"
            android:gravity="center"/>

    </LinearLayout>

    <!--    drinks selection-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dessertSelection"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:id="@+id/drinksSelection"
        android:paddingTop="10dp"
        android:paddingLeft="5dp"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/drinks"
            android:paddingRight="25dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="36dp"
            android:hint="@string/drinks_placeholder"
            android:textColor="@color/white"
            android:gravity="center"/>
    </LinearLayout>



</RelativeLayout>